--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "watch": "npx tsc -w"
   },
   "repository": {
     "type": "git",
